# ward

./: .gitignore  LICENSE  README.md  datagen.py  driver.py  main.py  pyproject.toml
configs/: abl_rag_moreshots.yaml  abl_rag_moreshots_extreme.yaml  abl_rag_qpd.yaml  abl_rag_subset.yaml  abl_wm_deltas.yaml  abl_wm_h=4.yaml  endtoend_retrieval_baselines.yaml  endtoend_retrival.yaml  example.yaml  main_experiment.yaml  memfree.yaml
configs/model/: claude3.5sonnet.yaml  claude3haiku.yaml  gpt3.5.yaml  llama3.1_405b_together.yaml  llama3.1_70b.yaml  llama3.1_70b_together.yaml  llama3.1_8b.yaml  llama3.1_8b_together.yaml
farad/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0039.json  (+3551 more)
src/: __init__.py  rag_system.py
src/attackers/: __init__.py  aag_attacker.py  attacker_factory.py  base_attacker.py  dummy_rag.py  facts_attacker.py  sib_attacker.py  watermark_attacker.py
src/config/: __init__.py  meta_config.py  ragwm_config.py
src/models/: __init__.py  api_model.py  hf_model.py
src/models/psp/: .gitignore
src/utils/: __init__.py
src/watermarks/: kgw_watermark.py
src/watermarks/kgw/: extended_watermark_processor.py
